--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+    androidTestCompile 'junit:junit:4.12'
 }
